--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,21 +3,48 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0;
   padding: 0;
-}
-
-body {
   background-color: black;
   text-align: center;
-}
-header {
   color: white;
 }
 
+header {
+  padding: 50px;
+}
 a {
   color: aquamarine;
   font-size: 16px;
 }
+div {
+  margin-top: 40px;
+}
 h1 {
   font-size: 50px;
   font-weight: normal;
+}
+h2 {
+  font-size: 42px;
+  font-weight: 300;
+}
+p,
+span {
+  font-size: 21px;
+  color: gray;
+  margin: 20px;
+}
+section {
+  min-height: 60vh;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+video {
+  margin: 20px;
+}
+footer {
+  padding: 20px 0px 20px 0px;
+}
+footer > p {
+  text-align: right;
+  margin: 0;
 }
